Fixed spacing issues in the html

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
   }
   .wrapper {
-    min-height: 86.75vh;
+    min-height: 86.72vh;
 	  margin-bottom: -103px;
 	  padding-bottom: 103px;
     position: relative;
